// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should render 1`] = `
<div>
  <rk-icon
    aria-label="empty"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="empty"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render with props 1`] = `
<div>
  <rk-icon
    aria-label="home"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="home"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render with props 2`] = `
<div>
  <rk-icon
    aria-label="home"
    class=""
    role="img"
  >
    <i
      aria-hidden="true"
      class="settings"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render with props 3`] = `
<div>
  <rk-icon
    aria-label="home"
    class="small"
    role="img"
  >
    <i
      aria-hidden="true"
      class="settings"
    />
  </rk-icon>
  
</div>
`;

exports[`Icon > should render with props 4`] = `
<div>
  <rk-icon
    aria-label="Settings"
    class="small"
    role="img"
  >
    <i
      aria-hidden="true"
      class="settings"
    />
  </rk-icon>
  
</div>
`;
